--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,8 @@
         </activity>
 
     </application>
+    <uses-sdk android:minSdkVersion="4" />
+    <uses-sdk android:targetSdkVersion="8" />
 
 
 </manifest> 
