--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,8 +13,8 @@
         </activity>
 
     </application>
-    <uses-sdk android:minSdkVersion="4" />
-    <uses-sdk android:targetSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="8"/>
+    
 
 
 </manifest> 
